templates/my_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: groww-deployment
  namespace: shaan-ns
  labels:
    first: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: groww-container
          image: mshaan/groww:v1.0.0
          ports:
            - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: groww-service
  namespace: shaan-ns
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 5020
      targetPort: 5005
      nodePort: 30080
  type: NodePort
